--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -1,9 +1,11 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
-  <div class="form-group">
-    <label for="nome">Nome</label>
+  <div class="form-group has-validation">
+    <label for="nome" class="control-label">Nome</label>
     <input
       type="text"
       class="form-control"
+      [class.is-invalid]="!nome.valid && nome.touched"
+      [class.has-feedback]="!nome.valid && nome.touched"
       name="nome"
       id="nome"
       placeholder="Nome"
@@ -15,14 +17,21 @@
       {{ nome.className }}
     </div>-->
 
-    <div *ngIf="!nome.valid && nome.touched">Nome é obrigatório</div>
+    <div
+      *ngIf="!nome.valid && nome.touched"
+      class="alert alert-danger"
+      role="alert"
+    >
+      Nome é obrigatório
+    </div>
   </div>
 
-  <div class="form-group">
+  <div class="form-group has-validation">
     <label for="email">Email</label>
     <input
       type="text"
       class="form-control"
+      [class.is-invalid]="!email.valid && email.touched"
       name="email"
       id="email"
       placeholder="Email"
@@ -32,7 +41,17 @@
       #email="ngModel"
     />
   </div>
+  <div
+    *ngIf="!email.valid && email.touched"
+    class="alert alert-danger"
+    role="alert"
+  >
+    Email é obrigatório
+  </div>
 
   <br />
-  <button type="submit" class="btn btn-primary" color="red">Submit</button>
+  <button type="submit" class="btn btn-primary" [disabled]="!f.valid">
+    Submit
+  </button>
+  <!--"Componente de Debug na tela" <app-form-debug [form]="f"></app-form-debug>-->
 </form>
