--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -1,57 +1,213 @@
-<form #f="ngForm" (ngSubmit)="onSubmit(f)">
-  <div class="form-group has-validation">
-    <label for="nome" class="control-label">Nome</label>
-    <input
-      type="text"
-      class="form-control"
-      [class.is-invalid]="!nome.valid && nome.touched"
-      [class.has-feedback]="!nome.valid && nome.touched"
-      name="nome"
-      id="nome"
-      placeholder="Nome"
-      [(ngModel)]="usuario.nome"
-      required
-      #nome="ngModel"
-    />
-    <!--<div>
-      {{ nome.className }}
-    </div>-->
-
-    <div
-      *ngIf="!nome.valid && nome.touched"
-      class="alert alert-danger"
-      role="alert"
-    >
-      Nome é obrigatório
+<form #f="ngForm" (ngSubmit)="onSubmit(f)" class="form-horizontal">
+  <div class="form-group has-validation mb-2">
+    <div class="col-sm-12 mt-2">
+      <label for="nome" class="control-label">Nome</label>
+    </div>
+    <div class="col-sm-12 mt-2">
+      <input
+        type="text"
+        class="form-control"
+        [class.is-invalid]="!nome.valid && nome.touched"
+        [class.has-feedback]="!nome.valid && nome.touched"
+        name="nome"
+        id="nome"
+        placeholder="Nome"
+        [(ngModel)]="usuario.nome"
+        required
+        #nome="ngModel"
+      />
+      <div
+        *ngIf="!nome.valid && nome.touched"
+        class="alert alert-danger"
+        role="alert"
+      >
+        Nome é obrigatório
+      </div>
+    </div>
+    <div class="col-sm-12 mt-2">
+      <label for="email">Email</label>
+      <input
+        type="text"
+        class="form-control"
+        [class.is-invalid]="!email.valid && email.touched"
+        name="email"
+        id="email"
+        placeholder="Email"
+        [(ngModel)]="usuario.email"
+        required
+        email
+        #email="ngModel"
+      />
+      <div
+        *ngIf="!email.valid && email.touched"
+        class="alert alert-danger"
+        role="alert"
+      >
+        Email é obrigatório
+      </div>
     </div>
   </div>
+  <div ngModelGroup="endereco">
+    <div class="col-sm-12 mb-2">
+      <div class="row has-validation">
+        <div class="col-md-3">
+          <label for="cep" class="control-label">CEP</label>
+          <input
+            type="text"
+            placeholder="CEP"
+            class="form-control"
+            id="cep"
+            name="cep"
+            ngModel
+            required
+            #cep="ngModel"
+            (blur)="consultaCEP(cep.value, f)"
+          />
 
-  <div class="form-group has-validation">
-    <label for="email">Email</label>
-    <input
-      type="text"
-      class="form-control"
-      [class.is-invalid]="!email.valid && email.touched"
-      name="email"
-      id="email"
-      placeholder="Email"
-      [(ngModel)]="usuario.email"
-      required
-      email
-      #email="ngModel"
-    />
-  </div>
-  <div
-    *ngIf="!email.valid && email.touched"
-    class="alert alert-danger"
-    role="alert"
-  >
-    Email é obrigatório
-  </div>
+          <div
+            *ngIf="!cep.valid && cep.touched"
+            class="alert alert-danger"
+            role="alert"
+          >
+            O CEP é obrigatório
+          </div>
+        </div>
 
+        <div class="col-md-3">
+          <label for="numero" class="control-label text-left">Número</label>
+          <input
+            type="text"
+            placeholder="Nº de residência"
+            class="form-control"
+            id="numero"
+            name="numero"
+            ngModel
+            required
+            #numero="ngModel"
+          />
+          <div
+            *ngIf="!numero.valid && numero.touched"
+            class="alert alert-danger"
+            role="alert"
+          >
+            O numero é obrigatório
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <label for="complemento" class="control-label">Complemento</label>
+          <input
+            type="text"
+            placeholder="Nº de residência"
+            class="form-control"
+            id="complemento"
+            name="complemento"
+            ngModel
+            required
+            #complemento="ngModel"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 mb-2">
+      <label for="rua" class="control-label">Rua</label>
+    </div>
+    <div class="col-sm-12 mb-2">
+      <input
+        type="text"
+        class="form-control"
+        [class.is-invalid]="!rua.valid && rua.touched"
+        [class.has-feedback]="!rua.valid && rua.touched"
+        name="rua"
+        id="rua"
+        placeholder="Nome"
+        [(ngModel)]="usuario.rua"
+        required
+        #rua="ngModel"
+      />
+
+      <div
+        *ngIf="!rua.valid && rua.touched"
+        class="alert alert-danger"
+        role="alert"
+      >
+        Rua é obrigatório
+      </div>
+    </div>
+  </div>
+  <div ngModelGroup="endereco">
+    <div class="col-sm-12 mb-2">
+      <div class="row has-validation">
+        <div class="col-md-4">
+          <label for="bairro" class="control-label">Bairro</label>
+          <input
+            type="text"
+            placeholder="CEP"
+            class="form-control"
+            id="bairro"
+            name="bairro"
+            ngModel
+            required
+            #bairro="ngModel"
+          />
+
+          <div
+            *ngIf="!bairro.valid && bairro.touched"
+            class="alert alert-danger"
+            role="alert"
+          >
+            O bairro é obrigatório
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <label for="estado" class="control-label text-left">Estado</label>
+          <input
+            type="text"
+            placeholder="Nº de residência"
+            class="form-control"
+            id="estado"
+            name="estado"
+            ngModel
+            required
+            #estado="ngModel"
+          />
+          <div
+            *ngIf="!estado.valid && estado.touched"
+            class="alert alert-danger"
+            role="alert"
+          >
+            O estado é obrigatório
+          </div>
+        </div>
+        <div class="col-md-3">
+          <label for="cidade" class="control-label">Cidade</label>
+          <input
+            type="text"
+            placeholder="CEP"
+            class="form-control"
+            id="cidade"
+            name="cidade"
+            ngModel
+            required
+            #cidade="ngModel"
+          />
+
+          <div
+            *ngIf="!cidade.valid && cidade.touched"
+            class="alert alert-danger"
+            role="alert"
+          >
+            A cidade é obrigatória
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <br />
-  <button type="submit" class="btn btn-primary" [disabled]="!f.valid">
+  <button type="submit" class="btn btn-primary ml-3" [disabled]="!f.valid">
     Submit
   </button>
-  <!--"Componente de Debug na tela" <app-form-debug [form]="f"></app-form-debug>-->
+  <!-- debug na tela \/ -->
+  <app-form-debug [form]="f"></app-form-debug>
 </form>
