<feat>Data Form iniciado: Inicio de projeto

--- a/src/app/data-form/data-form.component.html
+++ b/src/app/data-form/data-form.component.html
@@ -1,1 +1,32 @@
-<p>data-form works!</p>
+<form class="form-horizontal" [formGroup]="formulario">
+  <div class="form-group has-validation mb-2">
+    <div class="col-sm-12 mt-2">
+      <label for="nome" class="control-label">Nome</label>
+    </div>
+    <div class="col-sm-12 mt-2">
+      <input
+        formControlName="nome"
+        name="nome"
+        type="text"
+        class="form-control"
+        id="nome"
+        placeholder="Nome"
+      />
+    </div>
+    <div class="col-sm-12 mt-2">
+      <label for="email">Email</label>
+      <input
+        type="email"
+        class="form-control"
+        name="email"
+        formControlName="email"
+        id="email"
+        placeholder="nome@email.com"
+      />
+    </div>
+  </div>
+  <br />
+  <button type="submit" class="btn btn-primary ml-3">Submit</button>
+  <!-- debug na tela \/ -->
+  <app-form-debug [form]="formulario"></app-form-debug>
+</form>
