--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -98,12 +98,10 @@
           <label for="complemento" class="control-label">Complemento</label>
           <input
             type="text"
-            placeholder="Nº de residência"
             class="form-control"
             id="complemento"
             name="complemento"
             ngModel
-            required
             #complemento="ngModel"
           />
         </div>
@@ -209,5 +207,5 @@
     Submit
   </button>
   <!-- debug na tela \/ -->
-  <app-form-debug [form]="f"></app-form-debug>
+  <!--<app-form-debug [form]="f"></app-form-debug>-->
 </form>
